[gd_scene load_steps=13 format=3 uid="uid://bshn6ypksi42g"]

[ext_resource type="Script" uid="uid://ww4keowqcg0a" path="res://fantasma.gd" id="1_v7gvw"]
[ext_resource type="Texture2D" uid="uid://wf8jahay1kh8" path="res://Assets/Sprite-0006.png" id="2_v7gvw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5w6f7"]
atlas = ExtResource("2_v7gvw")
region = Rect2(0, 0, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gm2q"]
atlas = ExtResource("2_v7gvw")
region = Rect2(28, 0, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2ssq"]
atlas = ExtResource("2_v7gvw")
region = Rect2(56, 0, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5tb4"]
atlas = ExtResource("2_v7gvw")
region = Rect2(84, 0, 28, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_j10oi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w6f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gm2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2ssq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5tb4")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gm2q"]
size = Vector2(26, 31)

[sub_resource type="Animation" id="Animation_5w6f7"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_v7gvw"]
resource_name = "fade out"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6gm2q"]
_data = {
&"RESET": SubResource("Animation_5w6f7"),
&"fade out": SubResource("Animation_v7gvw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7gvw"]
size = Vector2(14, 26)

[node name="Fantasma" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_v7gvw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j10oi")
autoplay = "default"
frame_progress = 0.220478

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1, 1.5)
shape = SubResource("RectangleShape2D_6gm2q")

[node name="kill timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6gm2q")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_v7gvw")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="kill timer" to="." method="_on_kill_timer_timeout"]
